<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_theme" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_visite_plan" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_favorite" />
    </group>

    <item android:title="@string/nav_subtitle_info">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_information" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_map_info" />
        </menu>
    </item>

</menu>
