<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zamigos.espacedali.MainActivity"
    android:background="#ffffff">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView2"
        android:src="@drawable/dali"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo_daliparis"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_home"
        android:id="@+id/textView"
        android:textSize="18dp"
        android:layout_below="@+id/imageView"
        android:textAlignment="center"
        android:textColor="#434343"
        android:shadowColor="#ffffff"
        android:paddingBottom="15dp"
        android:background="#7dffffff"
        android:paddingTop="15dp"
        android:layout_marginTop="120dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_btn_plan"
            android:background="#686868"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnOeuvre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnHomeOeuvre"
            android:background="#808080"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>